# tutorial-test-driven-development-with-fastapi-and-docker

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  justfile  pyproject.toml  release.sh  requirements-dev.txt  requirements.txt  run.sh  setup.cfg
.github/workflows/: main.yml  push.yml
src/: Dockerfile  Dockerfile.prod  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
src/app/: config.py  db.py  log.py  main.py  summarizer.py
src/app/api/: crud.py  home.py  ping.py  summaries.py
src/app/models/: pydantic.py  tortoise.py
src/db/: Dockerfile
src/templates/: index.html
src/tests/: conftest.py  test_main.py  test_ping.py  test_summaries.py
src/tests/api/: test_home.py
