[tool.black]
line-length = 80
skip-magic-trailing-comma = true
target-version = ["py310"]

[tool.isort]
atomic = true
case_sensitive = true
float_to_top = true
force_single_line = true
line_length = 80
lines_after_imports = 2
profile = "black"
remove_redundant_aliases = true
skip_gitignore = true
src_paths = "src"

[tool.poetry]
name = "app"
version = "0.0.13"
description = "The `Test-Driven Development with FastAPI and Docker` course"
authors = ["Derek Wan <d.wan@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.10"
# core
aerich = "^0.6.3"
asyncpg = "^0.25.0"
beartype = "^0.10.4"
fastapi = "^0.75.2"
gunicorn = "^20.1.0"
requests = "^2.27.1"
tortoise-orm = "^0.19.0"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
# development
bump2version = "^1.0.1"
pre-commit = "^2.18.1"
pyclean = "^2.2.0"
# formatters
black = "^22.3.0"
isort = "^5.10.1"
# linters
flake8 = "^4.0.1"
flake8-absolute-import = "^1.0.0.1"
flake8-annotations = "^2.9.0"
flake8-bandit = "^3.0.0"
flake8-bugbear = "^22.4.25"
flake8-comprehensions = "^3.8.0"
flake8-debugger = "^4.1.2"
flake8-eradicate = "^1.2.1"
flake8-no-pep420 = "^2.2.0"
flake8-pie = "^0.15.0"
flake8-print = "^5.0.0"
flake8-simplify = "^0.19.2"
flake8-unused-arguments = "^0.0.10"
# testing
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-instafail = "^0.4.2"
pytest-xdist = "^2.5.0"

[tool.pyright]
include = ["src"]
venvPath = ".direnv"
pythonVersion = "3.10"
pythonPlatform = "Linux"
executionEnvironments = [{ root = "src" }]
typeCheckingMode = "strict"
reportMissingTypeArgument = false
reportMissingTypeStubs = false
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUntypedBaseClass = false
reportImplicitStringConcatenation = "error"
reportMissingSuperCall = "error"
reportPropertyTypeMismatch = "error"
reportUnnecessaryTypeIgnoreComment = "error"
reportUnusedCallResult = "error"
