#### app ######################################################################
[app]
ENV = 'dev'

[app_dev]
DEBUG = true
DB_URL = 'sqlite:///./db.sqlite'
LOGGING_BACKTRACE = true
LOGGING_LEVEL = 'DEBUG'
TITLE = 'Dev FastAPI app'

[app_test]
DEBUG = true
DB_URL = 'sqlite:///./db.sqlite'
LOGGING_BACKTRACE = true
LOGGING_LEVEL = 'DEBUG'
TITLE = 'Test FastAPI app'

# secret_key, database_url, min/max_connection_count
[app_prod]
DEBUG = false
DB_URL = 'sqlite:///./db.sqlite'
LOGGING_BACKTRACE = false
LOGGING_LEVEL = 'INFO'
TITLE = 'Prod FastAPI app'

#### black ####################################################################
[tool.black]
skip-magic-trailing-comma = true
target-version = ["py311"]

#### coverage #################################################################
[tool.coverage.run]
branch = true
data_file = ".coverage/data"
parallel = true
source = ["app"]

[tool.coverage.report]
exclude_lines = ["# pragma: no cover", "@overload"]
fail_under = 100.0
skip_covered = true
skip_empty = true

[tool.coverage.html]
directory = ".coverage/html"

#### hatch ####################################################################
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.hatch.version]
path = "src/app/__init__.py"

#### nitpick ##################################################################
[tool.nitpick]
style = [
  "https://raw.githubusercontent.com/dycw/nitpick/master/styles/common.toml",
  "https://raw.githubusercontent.com/dycw/nitpick/master/styles/3.11.toml",
  "https://raw.githubusercontent.com/dycw/nitpick/master/styles/pip-compile-no-hashes.toml",
]

#### project ##################################################################
[project]
name = "app"
dynamic = ["version"]
readme = "README.md"
requires-python = ">= 3.11"
authors = [{ name = "Derek Wan", email = "d.wan@icloud.com" }]
dependencies = [
  "aerich >= 0.7.1, < 0.8",
  "asyncpg >= 0.27.0, < 0.28",
  "beartype >= 0.13.0, < 0.14",
  "fastapi >= 0.95.0, < 0.96",
  "gunicorn >= 20.1.0",
  "httpx >= 0.23.3, < 0.24",
  "hypothesis >= 6.71.0, < 6.72",
  "pydantic[email] >= 1.10.7, < 1.11",
  "pytest >= 7.3.0, < 7.4",
  "tortoise-orm >= 0.19.3, < 0.20",
  "uvicorn[standard] >= 0.21.1, < 0.22",
]

[project.optional-dependencies]
dev = [
  "black",
  "dycw-utilities[test]",
  "hatch",
  "pip-tools",
  "ruff",
]

#### pyright ##################################################################
[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__", ".direnv", ".git", ".venv", "src/migrations"]
pythonVersion= "3.11"
executionEnvironments = [{ root = "src" }]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportIncompatibleMethodOverride = false
reportMissingTypeArgument = false
reportPrivateUsage = false
reportPrivateImportUsage = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUntypedBaseClass = false
reportMissingSuperCall = "error"
reportPropertyTypeMismatch = "error"
reportUnnecessaryTypeIgnoreComment = "error"
reportUnusedCallResult = "error"

#### pytest ###################################################################
[tool.pytest.ini_options]
addopts = [
  "-rsxX",
  "--color=auto",
  "--cov=app",
  "--cov-config=pyproject.toml",
  "--cov-report=html",
  "--strict-markers",
  "--tb=native"
]
filterwarnings = [
  "error",
  "ignore::beartype.roar.BeartypeDecorHintPep585DeprecationWarning",
  "ignore::DeprecationWarning",
  "ignore:Implicitly cleaning up <TemporaryDirectory '.*'>:ResourceWarning",
]
looponfailroots = ["src"]
minversion = "7.0"
testpaths = ["src/tests"]
xfail_strict = true

#### ruff #####################################################################
[tool.ruff]
exclude = ["src/migrations"]
ignore = [
  "ANN101", # flake8-annotations, missing-type-self
  "ANN102", # flake8-annotations, missing-type-cls
  "ANN401", # flake8-annotations, dynamically-typed-expression
  "B008",  # flake8-bugbear, function-call-argument-default
  "COM812",  # flake8-commas, trailing-comma-missing
  "D", # pydocstyle
  "PD", # pandas-vet
  "PLR0913", # refactor, too-many-arguments
  "PT012", # flake8-pytest-style, raises-with-multiple-statements
  "PT013", # flake8-pytest-style, incorrect-pytest-import
  "TCH001", # flake8-type-checking, typing-only-first-party-import
  "TCH002", # flake8-type-checking, typing-only-third-party-import
  "TCH003", # flake8-type-checking, typing-only-standard-library-import
  "TRY200", # tryceratops, reraise-no-cause
  "TRY301", # tryceratops, raise-within-try

]
select = ["ALL"]
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
"src/tests/**/*.py" = [
  "FBT001", # flake8-boolean-trap, boolean-positional-arg-in-function-definition
  "FBT003", # flake8-boolean-trap, boolean-positional-value-in-function-call
  "PLR2004", # refactor, magic-value-comparison
  "S101", # flake8-bandit, assert-used

]
